source/blender/blenkernel/intern/material.c
@@ -235,18 +235,14 @@ Material *BKE_material_localize(Material *ma)
 	 *
 	 * NOTE: Only possible once nested node trees are fully converted to that too. */
 
-	Material *man;
-
-	BKE_id_copy_ex(
-	        NULL, &ma->id, (ID **)&man,
-	        (LIB_ID_CREATE_NO_MAIN |
-	         LIB_ID_CREATE_NO_USER_REFCOUNT |
-	         LIB_ID_COPY_NO_PREVIEW |
-	         LIB_ID_COPY_NO_ANIMDATA),
-	        false);
+	Material *man = BKE_libblock_copy_nolib(&ma->id, false);
 
 	man->texpaintslot = NULL;
 	man->preview = NULL;
+
+	if (ma->nodetree != NULL) {
+		man->nodetree = ntreeLocalize(ma->nodetree);
+	}
 
 	/* man->gp_style = NULL; */ /* XXX: We probably don't want to clear here, or else we may get problems with COW later? */
 	BLI_listbase_clear(&man->gpumaterial);
